removed static self-awareness because that is an E_STRICT that i am never going to win. converted surface to use the stash. added the surface scope to the area include.

--- a/themes/default/design.phtml
+++ b/themes/default/design.phtml
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div style="border:1px solid red;">
-<?php m\surface::show('stdout') ?>
+<?php $surface->show('stdout') ?>
 </div>
 </body>
 </html>
