--- a/themes/default/design.css
+++ b/themes/default/design.css
@@ -66,11 +66,33 @@ body {
 }
 
 #header,
+#navmenu,
 #main {
 	background:rgba(0,0,0,0.2);
 	border-radius:10px;
 	margin:50px 50px;
 	padding:10px;
+}
+
+#navmenu {
+	display:block;
+	margin:0px 50px;
+}
+
+#navmenu li {
+	background:rgba(0,0,0,0.3);
+	border-radius:8px;
+	display:inline-block;
+	padding:6px;
+}
+
+#navmenu li:hover {
+	background:rgba(0,0,0,0.7);
+}
+
+#navmenu li a {
+	display:block;
+	text-decoration:none;
 }
 
 /*//
