--- a/themes/default/design.css
+++ b/themes/default/design.css
@@ -28,6 +28,7 @@ h3 { font-size:1.5em;color:#E97276; }
 #construct {
 	margin:0px auto;
 	overflow:auto;
+	position:relative;
 	width:960px;
 	z-index:100;
 }
@@ -127,3 +128,5 @@ body {
 	margin-bottom:10px;
 	padding:6px;
 }
+
+#main img { background:rgba(0,0,0,0.8);padding:6px; }
