--- a/themes/default/design.css
+++ b/themes/default/design.css
@@ -21,6 +21,8 @@ h1,h2,h3,h4,p,ul {
 	margin:0px 0px 16px 0px;
 }
 
+li { margin-bottom:16px; }
+
 h1 { font-size:3em; }
 h2 { font-size:2em; }
 h3 { font-size:1.5em;color:#E97276; }
@@ -90,6 +92,7 @@ body {
 	background:rgba(0,0,0,0.3);
 	border-radius:8px;
 	display:inline-block;
+	margin:0px 6px 0px 0px;
 	padding:6px;
 }
 
