--- a/themes/default/design.css
+++ b/themes/default/design.css
@@ -1,6 +1,6 @@
 
 body {
-	background:url(gfx/bg1.jpg) top left no-repeat fixed #a12123;
+	background:url(gfx/bg1.jpg) top left no-repeat fixed #A22223;
 	color:#ddd;
 	letter-spacing:1px;
 }
