--- a/themes/default/design.phtml
+++ b/themes/default/design.phtml
@@ -5,6 +5,7 @@
 	<title><?php $surface->show('page-title') ?></title>
 	<meta name="description" content="<?php $surface->show('page-description') ?>" />
 	<link rel="stylesheet" type="text/css" href="<?php $surface->uri('design.css') ?>" />
+	<link rel="shortcut icon" type="image/png" href="<?php $surface->uri('gfx/favicon.png') ?>" />
 	<link href="http://fonts.googleapis.com/css?family=Open+Sans:300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 	<link href="http://fonts.googleapis.com/css?family=Dosis:200&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 	<link href="http://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet" type="text/css">
@@ -15,8 +16,9 @@
 
 <div id="construct">
 	<div id="header">
+		<img src="<?php $surface->uri('gfx/logo-200.png') ?>" alt="Menagerie" style="float:left;" />
 		<h1><?php echo m\option::get('app-name') ?></h1>
-		<h2>mə-najh-rē &bull; <?php echo m\option::get('app-description-short') ?></h3>
+		<h2><?php echo m\option::get('app-description-short') ?></h3>
 	</div>
 
 <?php if(is_array($surface->get('navmenu'))) { ?>
