--- a/themes/default/design.css
+++ b/themes/default/design.css
@@ -21,6 +21,7 @@ h1,h2,h3,h4,p,ul {
 	margin:0px 0px 16px 0px;
 }
 
+img { border:0px;vertical-align:middle; }
 li { margin-bottom:16px; }
 
 h1 { font-size:2em; }
@@ -76,7 +77,8 @@ body {
 
 #header,
 #navmenu,
-#main {
+#main,
+#footer {
 	background:rgba(0,0,0,0.2);
 	border-radius:10px;
 	margin:50px 50px;
@@ -108,6 +110,15 @@ body {
 #navmenu li a {
 	display:block;
 	text-decoration:none;
+}
+
+#footer {
+	font-size:0.8em;
+	overflow:auto;
+}
+
+#footer .tray {
+	float:right;
 }
 
 /*//
