--- a/themes/default/design.phtml
+++ b/themes/default/design.phtml
@@ -6,11 +6,14 @@
 	<meta name="description" content="<?php $surface->show('page-description') ?>" />
 	<link rel="stylesheet" type="text/css" href="<?php $surface->uri('design.css') ?>" />
 	<link rel="shortcut icon" type="image/png" href="<?php $surface->uri('gfx/favicon.png') ?>" />
-	<link href="http://fonts.googleapis.com/css?family=Open+Sans:300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-	<link href="http://fonts.googleapis.com/css?family=Dosis:200&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+	<link href="http://fonts.googleapis.com/css?family=Open+Sans:300&amp;subset=latin,latin-ext" rel="stylesheet" type="text/css">
+	<link href="http://fonts.googleapis.com/css?family=Dosis:200&amp;subset=latin,latin-ext" rel="stylesheet" type="text/css">
 	<link href="http://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet" type="text/css">
+<?php m\ki::flow('m-surface-head') ?>
 </head>
 <body>
+
+<?php m\ki::flow('m-surface-body-begin') ?>
 
 <img src="<?php $surface->uri('gfx/watermark.png') ?>" id="watermark" alt="Menagerie" />
 
@@ -18,7 +21,7 @@
 	<div id="header">
 		<img src="<?php $surface->uri('gfx/logo-200.png') ?>" alt="Menagerie" style="float:left;" />
 		<h1><?php echo m\option::get('app-name') ?></h1>
-		<h2><?php echo m\option::get('app-description-short') ?></h3>
+		<h2><?php echo m\option::get('app-description-short') ?></h2>
 	</div>
 
 <?php if(is_array($surface->get('navmenu'))) { ?>
@@ -33,7 +36,19 @@
 <?php $surface->show('stdout') ?>
 	</div>
 
+	<div id="footer">
+		<div class="tray">
+		<img src="<?php $surface->uri('gfx/html5.png') ?>" alt="HTML5/CSS3" />
+		<img src="<?php $surface->uri('gfx/orangehat.png') ?>" alt="OrangeHat" />
+		</div>
+		design and code copyright &#169; 2012 bob majdak jr<br />
+		menagerie is released under the <a href="https://github.com/bobmajdakjr/menagerie/blob/master/README.md">2-clause &quot;New BSD&quot; licence</a><br />
+		m[<?php echo m_exec_time() ?>]
+	</div>
+
 </div>
+
+<?php m\ki::flow('m-surface-body-end') ?>
 
 </body>
 </html>
